--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,54 @@
     <meta charset="utf-8" />
     <title>Exercice hebdomadaire 4</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
-    <h1>Hello world</h1>
+    <div class="Chart">
+      <div class="chart">
+        <div class="Switzerland">
+          <p>Suisse</p>
+          <div class="Bar">
+            <div class="Mobile">
+              <p>65%</p>
+            </div>
+            <div class="Desktop">
+              <p>35%</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="USA">
+          <p>États-Unis</p>
+          <div class="Bar">
+            <div class="Mobile">
+              <p>51%</p>
+            </div>
+            <div class="Desktop">
+              <p>49%</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="Europe">
+          <p>Europe</p>
+          <div class="Bar">
+            <div class="Mobile">
+              <p>41%</p>
+            </div>
+            <div class="Desktop">
+              <p>59%</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <script src="js/main.js" type="module"></script>
   </body>
